Refactor project structure: migrate HTML files to src, implement build script, and update dependencies
- Moved HTML files from public to src directory for better organization.
- Added build script to automate the copying of files from src to public.
- Removed old 404, about, blog, index, and project HTML files.
- Created new layout and content files in src for dynamic rendering.
- Updated package.json to include build script and new dependencies.
- Removed unused CSS and HTML files to streamline the project.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "static-server ./public"
+    "start": "static-server ./public",
+    "build": "node ./scripts/build.js"
   },
   "devDependencies": {
-    "static-server": "^2.2.1"
+    "glob": "^13.0.0",
+    "static-server": "^3.0.0"
   }
 }
