feat: add CMS functionality with post management and AI enhancement
- Introduced a new `cms.js` file for the content management system.
- Implemented routes for listing posts and editing them with metadata.
- Added AI enhancement feature using the Anthropic API to improve post content.
- Updated `package.json` to include `express` and `@anthropic-ai/sdk` as dependencies.
- Enhanced the UI with a responsive design and integrated TinyMCE for rich text editing.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "cms": "node cms.js"
   },
   "devDependencies": {},
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2",
+    "@anthropic-ai/sdk": "^0.27.0"
+  }
 }
