--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "npm run dev",
     "cms": "node cms.js"
   },
-  "devDependencies": {},
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.27.0",
     "express": "^4.18.2",
-    "@anthropic-ai/sdk": "^0.27.0"
+    "gray-matter": "^4.0.3",
+    "marked": "^17.0.1"
   }
 }
