--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "scripts": {
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
-    "start": "npm run dev",
-    "cms": "node cms.js"
+    "start": "npm run dev"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.27.0",
-    "express": "^4.18.2",
     "gray-matter": "^4.0.3",
     "marked": "^17.0.1"
   }
